devops/k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recrutai
  labels:
    name: recrutai
    environment: development
